// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should render without crashing and match snapshot 1`] = `
<DocumentFragment>
  .c1 {
  --tw-border-opacity: 1;
  border-color: rgb(229 231 235 / var(--tw-border-opacity));
  min-width: 290px;
  border-right-width: 1px;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  min-width: 290px;
}

.dark .c0 {
  --tw-border-opacity: 1;
  border-color: rgb(75 85 99 / var(--tw-border-opacity));
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<Sidebar /> should render without crashing and match snapshot with mini sidebar 1`] = `
<DocumentFragment>
  .c1 {
  --tw-border-opacity: 1;
  border-color: rgb(229 231 235 / var(--tw-border-opacity));
  min-width: 290px;
  border-right-width: 1px;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  min-width: 80px;
}

.dark .c0 {
  --tw-border-opacity: 1;
  border-color: rgb(75 85 99 / var(--tw-border-opacity));
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;
